--- a/ReactMultiPageWebsite/package.json
+++ b/ReactMultiPageWebsite/package.json
@@ -11,10 +11,13 @@
     "axios": "^0.21.1",
     "plotly.js": "^1.58.4",
     "react": "^16.14.0",
+    "react-dnd": "^14.0.2",
+    "react-dnd-html5-backend": "^14.0.0",
     "react-dom": "^16.14.0",
     "react-plotly.js": "^2.5.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "react-tag-input": "^6.7.0"
   },
   "scripts": {
     "start": "react-scripts --max_old_space_size=4096 start",
