--- a/ReactMultiPageWebsite/package.json
+++ b/ReactMultiPageWebsite/package.json
@@ -17,6 +17,7 @@
     "react-plotly.js": "^2.5.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-spinners": "^0.11.0",
     "react-tag-input": "^6.7.0"
   },
   "scripts": {
